# fidget-spinner

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  check.py  rust-toolchain.toml
assets/codex-skills/fidget-spinner/: SKILL.md
assets/codex-skills/frontier-loop/: SKILL.md
assets/systemd/: fidget-spinner-libgrid-ui.service.in  fidget-spinner-ui.service.in
crates/fidget-spinner-cli/: Cargo.toml
crates/fidget-spinner-cli/src/: bundled_skill.rs  main.rs  ui.rs
crates/fidget-spinner-cli/src/mcp/: catalog.rs  fault.rs  mod.rs  output.rs  projection.rs  protocol.rs  query_output.rs  service.rs  telemetry.rs  worker.rs
crates/fidget-spinner-cli/src/mcp/host/: binary.rs  config.rs  mod.rs  process.rs  runtime.rs
crates/fidget-spinner-cli/src/ui/: assets.rs  detail.rs  mod.rs  registry.rs  results.rs  routes.rs
crates/fidget-spinner-cli/tests/: mcp_hardening.rs
crates/fidget-spinner-core/: Cargo.toml
crates/fidget-spinner-core/src/: error.rs  id.rs  lib.rs  model.rs
crates/fidget-spinner-store-sqlite/: Cargo.toml
crates/fidget-spinner-store-sqlite/src/: lib.rs  query.rs
docs/: architecture.md  frontier-membership-design.md  json-normalization-audit.md  libgrid-dogfood.md  metric-kpi-governance.md  product-spec.md  supervisory-tag-governance.md
scripts/: install-codex-skill.sh  install-local.sh
