[package]
name = "fidget-spinner-cli"
categories.workspace = true
description = "CLI, MCP server, and local navigator for Fidget Spinner"
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
camino.workspace = true
clap.workspace = true
dirs.workspace = true
fidget-spinner-core = { path = "../fidget-spinner-core" }
fidget-spinner-store-sqlite = { path = "../fidget-spinner-store-sqlite" }
libmcp = { git = "https://git.swarm.moe/libmcp.git", rev = "e325cd23f19378f543981071673c1d03be438fa5" }
maud.workspace = true
percent-encoding.workspace = true
plotters.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
libmcp-testkit = { git = "https://git.swarm.moe/libmcp.git", rev = "e325cd23f19378f543981071673c1d03be438fa5", package = "libmcp-testkit" }

[lints]
workspace = true
