[package]
name = "fidget-spinner-store-sqlite"
description = "Per-project SQLite store for the Fidget Spinner DAG spine"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
fidget-spinner-core = { path = "../fidget-spinner-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
