[package]
name = "fidget-spinner-store-sqlite"
categories.workspace = true
description = "SQLite-backed per-project store for Fidget Spinner DAG projects"
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
fidget-spinner-core = { path = "../fidget-spinner-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
